--- a/static/style/style.css
+++ b/static/style/style.css
@@ -388,13 +388,14 @@ th:last-child{
 .form-container{
     background: #fff;
     width: 300px;
-    height: 400px;
+    height: 600px;
     position: relative;
     text-align: center;
     padding: 20px 0;
     margin: auto;
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    padding-bottom: 40px;
 }
 .message-container{
     background: #fff;
