--- a/templates/account.html
+++ b/templates/account.html
@@ -40,7 +40,7 @@
                             <span onclick="register()">Register</span>
                             <hr id="Indicator">
                         </div>
-                        <form id="LoginForm" method="POST" enctype="multipart/form-data">
+                        <form id="LoginForm" method="POST" action="{% url 'account' %}" enctype="multipart/form-data">
                             {% csrf_token %}
                             <input type="text"  required placeholder="Username" name="username">
                             <input type="password" required placeholder="Password" name="password">
@@ -48,7 +48,7 @@
                             <a href="">Forget Password</a>
                         </form>
 
-                        <form id="RegForm" method="POST" enctype="multipart/form-data">
+                        <form id="RegForm" method="POST" action="{% url 'account' %}" enctype="multipart/form-data">
                             {% csrf_token %}
                             <input type="text" name="username" placeholder="Username" required maxlength="8" minlength="3">
                             <input type="email" name="email" placeholder="Email" required>
