--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
                     
                     <li><a href="{% url 'account' %}">Account</a></li>
                     {% else %}
-                    <li><a href="{% url 'orders' %}">Orders</a></li>
+                    <li><a href="{% url 'cart' %}">Orders</a></li>
                     <li><a href="{% url 'logout' %}">logout</a></li>
                     {% endif %}
                 </ul>
