--- a/templates/orders.html
+++ b/templates/orders.html
@@ -23,7 +23,8 @@
         <li class="{{message.tags}}">{{message}}</li>
         {% endfor %}
         {% else%}
-        {% include 'orders.html' %}
+        
+        <p>No messages to display.</p>
     </div>
     {% endif %}
     <!-- Cart items details -->
