--- a/templates/footer.html
+++ b/templates/footer.html
@@ -35,6 +35,6 @@
             </div>
         </div>
         <hr>
-        <p class="copyright">Copyright 2020 - Samwit Adhikary</p>
+        <p class="copyright">Copyright 2024 -Mohamed Nufaij</p>
     </div>
 </div>
