--- a/templates/header.html
+++ b/templates/header.html
@@ -17,15 +17,16 @@
                     
                     <li><a href="{% url 'account' %}">Account</a></li>
                     {% else %}
-                    <li><a href="{% url 'orders' %}">Orders</a></li>
-                    <li><a href="{% url 'logout' %}">logout</a></li>
+                    
+                     <li><a href="{% url 'show_orders' %}">Orders</a></li>
+                     <li><a href="{% url 'logout' %}">logout</a></li>
                     {% endif %}
                 </ul>
             </nav>
             {% if user.is_authenticated %}
             <a href="{% url 'cart' %}"><img src="{%static 'images/cart.png'%}" width="30px" height="30px"></a>
             {% endif %}
-            <img src="{% static 'images/menu.png'%}" class="menu-icon" onclick="menutoggle()">
+            <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
         </div>
        
     </div>
