--- a/templates/cart.html
+++ b/templates/cart.html
@@ -26,33 +26,32 @@
     {% endif %}
     <!-- Cart items details -->
     <div class="small-container cart-page">
-        {% if cart and cart.added_items.all %}
+        {% if cart and cart.ordered_items.all %}
         <table>
             <tr>
                 <th>Product</th>
                 <th>Quantity</th>
                 <th>Subtotal</th>
             </tr>
-            {% for cart_item in cart.added_items.all %}
+            {% for cart_item in cart.ordered_items.all %}
             <tr>
                 <td>
                     <div class="cart-info">
-                        <img src="{{cart_item.product.image.url}}">
+                        <img src="{{ cart_item.product.image.url }}">
                         <div>
-                            <p>{{cart_item.product.title}}</p>
-                            <small>{{cart_item.product.price}}</small>
+                            <p>{{ cart_item.product.title }}</p>
+                            <small>{{ cart_item.product.price }}</small>
                             <br>
-                            <a href="{% url 'remove_item' cart item.id %}">Remove</a>
+                            <a href="{% url 'remove_items' cart_item.id %}">Remove</a>
                         </div>
                     </div>
                 </td>
-                <td><input type="number" disabled value="1" value="{{cart_item.quantity}}"></td>
-                
+                <td><input type="number" disabled value="{{ cart_item.quantity }}"></td>
                 <td>${{ cart_item.product.price|multiply:cart_item.quantity }}</td>
             </tr>
-            <tr>
-                {% endfor %}
-                <td>
+            {% endfor %}
+            
+        
                     <div class="cart-info">
                         <img src="{% static 'images/buy-2.jpg' %}">
                         <div>
@@ -93,9 +92,9 @@
                     <td colspan="2">
 
                     </td>
-                    <form action="{% url 'checkout' %}" enctype="multipart/form-data" method="post">
+                    <form action="{% url 'checkout_cart' %}" enctype="multipart/form-data" method="post">
                     <td><button id="Confirm" type="submit">Confirm Order</button>
-                        <input type="hidden" name="total" value="{% total cart%}">
+                        <input type="hidden" name="total" value="{% total cart %}">
                     {% csrf_token %}
                     </form></td>
                 </tr>
